# openhitls-rs

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  ARCH_LOG.md  ARCH_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEV_LOG.md  MIGRATION_REPORT.md  PERF_REPORT.md  PROMPT_LOG.md  QUALITY_REPORT.md  README.md  SECURITY.md  SKILLS.md  TEST_LOG.md  audit.toml  clippy.toml  deny.toml  mutants.toml  typos.toml
crates/hitls-auth/: Cargo.toml
crates/hitls-auth/src/: lib.rs
crates/hitls-auth/tests/: migrated_otp.rs  migrated_privpass.rs  migrated_privpass_serialization.rs  migrated_spake2plus.rs
crates/hitls-bignum/: Cargo.toml
crates/hitls-bignum/src/: bignum.rs  ct.rs  gcd.rs  lib.rs  montgomery.rs  ops.rs  prime.rs  rand.rs
crates/hitls-bignum/tests/: migrated_bn.rs
crates/hitls-cli/: Cargo.toml  README.md
crates/hitls-cli/src/: conf_util.rs  crl.rs  dgst.rs  enc.rs  genpkey.rs  genrsa.rs  kdf.rs  keymgmt_defer.rs  list.rs  mac.rs  main.rs  pkcs12.rs  pkey.rs  pkeyutl.rs  prime.rs  rand_cmd.rs  req.rs  rsa_cmd.rs  s_client.rs  s_server.rs  sm_defer.rs  speed.rs  verify.rs  x509cmd.rs
crates/hitls-cli/tests/: snapshots.rs
crates/hitls-crypto/: Cargo.toml  build.rs
crates/hitls-crypto/benches/: crypto_bench.rs
crates/hitls-crypto/src/: cbc_mac.rs  lib.rs  provider.rs  zalloc.rs
crates/hitls-crypto/tests/: ct_verify.rs  feature_smoke.rs  migrated_aes.rs  migrated_aes_ccm.rs  migrated_aes_kw.rs  migrated_cbc_mac.rs  migrated_chachapoly.rs  migrated_cmac.rs  migrated_cmvp.rs  migrated_curve25519.rs  migrated_dh.rs  migrated_drbg.rs  migrated_ecc.rs  migrated_elgamal.rs  migrated_encode_sign.rs  migrated_encode_sm2_cipher.rs  migrated_frodokem.rs  migrated_gcm.rs  migrated_gmac.rs  migrated_hkdf.rs  migrated_hmac.rs  migrated_hpke.rs  migrated_hybridkem.rs  migrated_hybridkem_ecdh.rs  migrated_mceliece.rs  migrated_md5.rs  migrated_mldsa.rs  migrated_mlkem.rs  migrated_paillier.rs  migrated_pbkdf2.rs  migrated_rsa.rs  migrated_scrypt.rs  migrated_sha1.rs  migrated_sha2.rs  migrated_sha3.rs  migrated_siphash.rs  migrated_sm2.rs  migrated_sm3.rs  migrated_sm4.rs  migrated_sm9.rs  (+4 more)
crates/hitls-pki/: Cargo.toml
crates/hitls-pki/src/: encoding.rs  lib.rs  oid_mapping.rs
crates/hitls-pki/tests/: migrated_cms_negative_parse.rs  migrated_crl_rfc5280_gap.rs  migrated_crl_rfc5280_verify.rs  migrated_csr_negative_parse.rs  migrated_encode_ec_pubkey.rs  migrated_encode_key_codec.rs  migrated_encode_pkcs8_dhdsa.rs  migrated_phase_b_audit_pins.rs  migrated_phase_i_closeout_pins.rs  migrated_pkcs12_negative_parse.rs  migrated_x509_check_vfy.rs  migrated_x509_crl_extensions.rs  migrated_x509_parse.rs
crates/hitls-tls/: Cargo.toml
crates/hitls-tls/src/: cert_verify.rs  connection.rs  connection12.rs  connection12_async.rs  connection_async.rs  connection_dtlcp.rs  connection_dtlcp_async.rs  connection_dtls12.rs  connection_dtls12_async.rs  connection_dtls13.rs  connection_info.rs  connection_tlcp.rs  connection_tlcp_async.rs  ech.rs  lib.rs  macros.rs
crates/hitls-tls/tests/: migrated_interface_tlcp_audit.rs  migrated_kdf_tls12.rs  migrated_phase_e_audit_pins.rs  migrated_phase_f_audit_pins.rs
crates/hitls-utils/: Cargo.toml
crates/hitls-utils/src/: hex.rs  lib.rs
crates/hitls-utils/tests/: migrated_bsl.rs  migrated_codecs.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_aes_block/: seed_aes128  seed_aes192  seed_aes256  seed_random
fuzz/corpus/fuzz_aes_modes/: seed_cfb  seed_cfb256  seed_ctr  seed_unwrap_fuzz  seed_wrap  seed_xts
fuzz/corpus/fuzz_cbc_record/: seed_larger  seed_min_sha256  seed_not_aligned  seed_two_blocks
fuzz/corpus/fuzz_chacha20/: seed_large  seed_no_aad  seed_roundtrip  seed_tamper
fuzz/corpus/fuzz_cmac/: seed_aes128  seed_aes256  seed_empty_msg  seed_large
fuzz/corpus/fuzz_drbg/: seed_ctr_exact  seed_ctr_exact_ff  seed_ctr_withdf_pattern  seed_hmac_ff  seed_hmac_reseed
fuzz/corpus/fuzz_dsa_sign/: seed_allff  seed_roundtrip_msg
fuzz/corpus/fuzz_dsa_verify/: seed_der_sig  seed_fuzzed_sig
fuzz/corpus/fuzz_dtls_state_machine/: seed_dtls_hs_header  seed_dtls_record  seed_dtls_to_tls  seed_hvr  seed_multi_record  seed_record_hs
fuzz/corpus/fuzz_ecdsa_sign/: seed_p256_tamper  seed_p384_aa  seed_p521_ff  seed_p521_tamper
fuzz/corpus/fuzz_ed25519/: seed_from_pk_ff  seed_from_seed_ff  seed_from_seed_seq  seed_from_seed_zero  seed_gen_msg
fuzz/corpus/fuzz_ed448/: seed_context  seed_context_empty  seed_from_seed  seed_from_seed_ff  seed_fuzzed_sig  seed_fuzzed_sig_ff
fuzz/corpus/fuzz_elgamal/: seed_large  seed_text
fuzz/corpus/fuzz_frodokem/: seed_fuzzed_ct_ff  seed_roundtrip2
fuzz/corpus/fuzz_hmac/: seed_allff  seed_empty_key  seed_empty_msg  seed_long_key  seed_sha256_chunked  seed_sha256_oneshot  seed_sha512_chunked  seed_sha512_oneshot
fuzz/corpus/fuzz_hpke/: seed_fuzzed_pk  seed_msg
fuzz/corpus/fuzz_hybridkem/: seed_long_ct
fuzz/corpus/fuzz_mldsa_sign/: seed_44_fuzzed_sig  seed_65_fuzzed_sig  seed_87_fuzzed_sig  seed_87_roundtrip  seed_allff
fuzz/corpus/fuzz_mldsa_verify/: seed_44_fuzzed  seed_65_fuzzed
fuzz/corpus/fuzz_mlkem/: seed_1024_fuzzed_ct  seed_512_fuzzed_ct  seed_512_fuzzed_ek  seed_768_fuzzed_ct  seed_768_fuzzed_ek  seed_short
fuzz/corpus/fuzz_paillier/: seed_large  seed_text
fuzz/corpus/fuzz_pbkdf2/: seed_basic  seed_empty_pass  (+6 more)
fuzz/dictionary/: common.dict
fuzz/fuzz_targets/: fuzz_aead_decrypt.rs  fuzz_aes_block.rs  fuzz_aes_modes.rs  fuzz_asn1.rs  fuzz_base64.rs  fuzz_cbc_record.rs  fuzz_chacha20.rs  fuzz_cmac.rs  fuzz_cms.rs  fuzz_crl.rs  fuzz_drbg.rs  fuzz_dsa_sign.rs  fuzz_dsa_verify.rs  fuzz_dtls_state_machine.rs  fuzz_ecdh.rs  fuzz_ecdsa_sign.rs  fuzz_ed25519.rs  fuzz_ed448.rs  fuzz_elgamal.rs  fuzz_frodokem.rs  fuzz_hkdf.rs  fuzz_hmac.rs  fuzz_hpke.rs  fuzz_hybridkem.rs  fuzz_mceliece.rs  fuzz_mldsa_sign.rs  fuzz_mldsa_verify.rs  fuzz_mlkem.rs  fuzz_paillier.rs  fuzz_pbkdf2.rs  fuzz_pem.rs  fuzz_pkcs12.rs  fuzz_pkcs8.rs  fuzz_rsa_sign.rs  fuzz_scrypt.rs  fuzz_slhdsa_sign.rs  fuzz_slhdsa_verify.rs  fuzz_sm2_sign.rs  fuzz_sm9.rs  fuzz_tlcp_codec.rs  (+11 more)
tests/interop/: Cargo.toml
(+500 files in other folders)
