[package]
name = "hitls-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hitls-utils = { path = "../crates/hitls-utils" }
hitls-crypto = { path = "../crates/hitls-crypto", features = [
    "aes", "modes", "chacha20", "rsa", "ecdsa", "sm2", "hkdf",
    "mlkem", "mldsa", "slh-dsa", "ed25519", "dsa", "sha2", "sha3",
] }
hitls-pki = { path = "../crates/hitls-pki" }
hitls-tls = { path = "../crates/hitls-tls", features = ["tls12", "tls13", "dtls12", "tlcp"] }
hitls-types = { path = "../crates/hitls-types" }

[[bin]]
name = "fuzz_asn1"
path = "fuzz_targets/fuzz_asn1.rs"
doc = false

[[bin]]
name = "fuzz_base64"
path = "fuzz_targets/fuzz_base64.rs"
doc = false

[[bin]]
name = "fuzz_pem"
path = "fuzz_targets/fuzz_pem.rs"
doc = false

[[bin]]
name = "fuzz_x509"
path = "fuzz_targets/fuzz_x509.rs"
doc = false

[[bin]]
name = "fuzz_crl"
path = "fuzz_targets/fuzz_crl.rs"
doc = false

[[bin]]
name = "fuzz_pkcs8"
path = "fuzz_targets/fuzz_pkcs8.rs"
doc = false

[[bin]]
name = "fuzz_pkcs12"
path = "fuzz_targets/fuzz_pkcs12.rs"
doc = false

[[bin]]
name = "fuzz_cms"
path = "fuzz_targets/fuzz_cms.rs"
doc = false

[[bin]]
name = "fuzz_tls_record"
path = "fuzz_targets/fuzz_tls_record.rs"
doc = false

[[bin]]
name = "fuzz_tls_handshake"
path = "fuzz_targets/fuzz_tls_handshake.rs"
doc = false

[[bin]]
name = "fuzz_aead_decrypt"
path = "fuzz_targets/fuzz_aead_decrypt.rs"
doc = false

[[bin]]
name = "fuzz_x509_verify"
path = "fuzz_targets/fuzz_x509_verify.rs"
doc = false

[[bin]]
name = "fuzz_tls_handshake_deep"
path = "fuzz_targets/fuzz_tls_handshake_deep.rs"
doc = false

[[bin]]
name = "fuzz_dtls_state_machine"
path = "fuzz_targets/fuzz_dtls_state_machine.rs"
doc = false

[[bin]]
name = "fuzz_tls_extensions"
path = "fuzz_targets/fuzz_tls_extensions.rs"
doc = false

[[bin]]
name = "fuzz_tls12_codec"
path = "fuzz_targets/fuzz_tls12_codec.rs"
doc = false

[[bin]]
name = "fuzz_tlcp_codec"
path = "fuzz_targets/fuzz_tlcp_codec.rs"
doc = false

[[bin]]
name = "fuzz_cbc_record"
path = "fuzz_targets/fuzz_cbc_record.rs"
doc = false

[[bin]]
name = "fuzz_rsa_verify"
path = "fuzz_targets/fuzz_rsa_verify.rs"
doc = false

[[bin]]
name = "fuzz_ecdsa_verify"
path = "fuzz_targets/fuzz_ecdsa_verify.rs"
doc = false

[[bin]]
name = "fuzz_hkdf"
path = "fuzz_targets/fuzz_hkdf.rs"
doc = false

[[bin]]
name = "fuzz_sm2_verify"
path = "fuzz_targets/fuzz_sm2_verify.rs"
doc = false

[[bin]]
name = "fuzz_ccm_decrypt"
path = "fuzz_targets/fuzz_ccm_decrypt.rs"
doc = false

[[bin]]
name = "fuzz_tls12_prf"
path = "fuzz_targets/fuzz_tls12_prf.rs"
doc = false

[[bin]]
name = "fuzz_tls13_state_machine"
path = "fuzz_targets/fuzz_tls13_state_machine.rs"
doc = false

[[bin]]
name = "fuzz_tls12_state_machine"
path = "fuzz_targets/fuzz_tls12_state_machine.rs"
doc = false

[[bin]]
name = "fuzz_mlkem"
path = "fuzz_targets/fuzz_mlkem.rs"
doc = false

[[bin]]
name = "fuzz_mldsa_sign"
path = "fuzz_targets/fuzz_mldsa_sign.rs"
doc = false

[[bin]]
name = "fuzz_slhdsa_sign"
path = "fuzz_targets/fuzz_slhdsa_sign.rs"
doc = false

[[bin]]
name = "fuzz_rsa_sign"
path = "fuzz_targets/fuzz_rsa_sign.rs"
doc = false

[[bin]]
name = "fuzz_ecdsa_sign"
path = "fuzz_targets/fuzz_ecdsa_sign.rs"
doc = false

[[bin]]
name = "fuzz_ed25519"
path = "fuzz_targets/fuzz_ed25519.rs"
doc = false

[[bin]]
name = "fuzz_sm2_sign"
path = "fuzz_targets/fuzz_sm2_sign.rs"
doc = false

[[bin]]
name = "fuzz_dsa_sign"
path = "fuzz_targets/fuzz_dsa_sign.rs"
doc = false
