[package]
name = "hitls-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Authentication protocols for openHiTLS"

[dependencies]
hitls-types = { path = "../hitls-types" }
hitls-utils = { path = "../hitls-utils" }
hitls-bignum = { path = "../hitls-bignum" }
hitls-crypto = { path = "../hitls-crypto", features = ["hmac", "sha1", "sha2", "pbkdf2", "hkdf", "ecc"] }
zeroize = { version = "1.8", features = ["derive"] }
subtle = { workspace = true }
getrandom = "0.3"

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["otp", "spake2plus"]
otp = []
spake2plus = []
privpass = []
