[package]
name = "hitls-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Authentication protocols for openHiTLS"

[lints]
workspace = true

[dependencies]
hitls-types = { path = "../hitls-types" }
hitls-utils = { path = "../hitls-utils" }
hitls-bignum = { path = "../hitls-bignum" }
hitls-crypto = { path = "../hitls-crypto", features = ["hmac", "sha1", "sha2", "pbkdf2", "hkdf", "ecc", "rsa"] }
zeroize = { version = "1.8", features = ["derive"] }
subtle = { workspace = true }
getrandom = "0.4"

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["otp", "spake2plus"]
otp = []
spake2plus = []
privpass = []
# Test-only: enables deterministic-scalar hooks for byte-exact KAT migration
# (e.g. SPAKE2+ `generate_share_with_scalar`). Never enable in production —
# a caller-chosen ephemeral scalar leaks the password.
kat-nonce = []
