[package]
name = "hitls-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line tool for openHiTLS"

[[bin]]
name = "hitls"
path = "src/main.rs"

[dependencies]
hitls-types = { path = "../hitls-types" }
hitls-crypto = { path = "../hitls-crypto", features = [
    "md5", "sha1", "sha2", "sha3", "sm3",
    "aes", "sm4", "modes", "chacha20",
    "hmac", "cmac",
    "rsa", "ecdsa", "ecdh", "ed25519", "x25519", "ed448", "x448",
    "mlkem", "mldsa",
] }
hitls-tls = { path = "../hitls-tls", features = ["tls13", "tls12"] }
hitls-pki = { path = "../hitls-pki" }
hitls-auth = { path = "../hitls-auth" }
hitls-utils = { path = "../hitls-utils" }
clap = { version = "4", features = ["derive"] }
getrandom = "0.2"
