[package]
name = "hitls-pki"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PKI certificate management for openHiTLS"

[dependencies]
hitls-types = { path = "../hitls-types" }
hitls-crypto = { path = "../hitls-crypto", features = ["rsa", "ecdsa", "sha2", "sha1", "ed25519", "hmac", "pbkdf2", "modes"] }
hitls-utils = { path = "../hitls-utils" }
zeroize = { version = "1.8", features = ["derive"] }
getrandom = "0.2"

[features]
default = ["x509", "pkcs12", "cms"]
x509 = []
pkcs12 = []
cms = []
