[package]
name = "hitls-tls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TLS protocol implementation for openHiTLS"

[dependencies]
hitls-types = { path = "../hitls-types" }
hitls-crypto = { path = "../hitls-crypto", features = ["modes", "chacha20", "x25519", "ecdh", "ecdsa", "rsa", "ed25519"] }
hitls-pki = { path = "../hitls-pki" }
hitls-utils = { path = "../hitls-utils" }
getrandom = "0.2"
log = "0.4"
subtle = { workspace = true }
zeroize = { version = "1.8", features = ["derive"] }
flate2 = { workspace = true, optional = true }

[dependencies.tokio]
version = "1"
features = ["io-util", "net"]
optional = true

[features]
default = ["tls13"]
tls12 = []
tls13 = []
dtls12 = []
tlcp = []
cert-compression = ["flate2"]
async = ["tokio"]
