[package]
name = "hitls-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hitls-types = { path = "../../crates/hitls-types" }
hitls-utils = { path = "../../crates/hitls-utils" }
hitls-bignum = { path = "../../crates/hitls-bignum" }
hitls-crypto = { path = "../../crates/hitls-crypto", features = [
    "md5", "sha1", "sha2", "sha3", "sm3",
    "aes", "modes", "chacha20",
    "hmac", "hkdf", "pbkdf2",
    "rsa", "ecdsa", "ed25519", "x25519", "ecdh",
    "mlkem", "mldsa",
    "hybridkem",
] }
hitls-pki = { path = "../../crates/hitls-pki" }
hitls-tls = { path = "../../crates/hitls-tls" }
hitls-auth = { path = "../../crates/hitls-auth" }
zeroize = "1"
